src/tests/Advanced/ShouldFail/match_not_exaustive.ml
let f x = match x with 6 -> 42 in prInt (f 42)
(* Should fail*)